Configure toolchain for JDK 17 in all JavaPlugin projects
By default, Gradle uses the same Java version for running Gradle itself and building JVM projects.

This is not always desirable.
Building projects with different Java versions on different developer machines and CI servers may lead to unexpected issues.
Additionally, you may want to build a project using a Java version that is not supported for running Gradle.

A Java Toolchain is a set of tools, usually taken from a local JRE/JDK installation that are used to configure different aspects of a build.
Compile tasks may use javac as their compiler, test and exec tasks may use the java command while javadoc will be used to generate documentation.